Improved Folder Structure Organization

--- a/views/app-main/home.ejs
+++ b/views/app-main/home.ejs
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL | Home</title>
 
-    <link rel="icon" href="./gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./app-main/gallery/ICONS/favicon.png" type="image/x-icon">
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./app-main/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/style_2.css" />
+    <link rel="stylesheet" href="./app-main/css/style_2.css" />
 
   <style>
     
@@ -79,13 +79,13 @@
   
     <div class="video-container">
       <video autoplay muted loop>
-        <source src="/gallery/VIDEOS/Police Cars.mp4" type="video/mp4">
+        <source src="/app-main/gallery/VIDEOS/Police Cars.mp4" type="video/mp4">
       </video>
     </div>
   
     <div class="overlay"></div>
 
-    <%- include("../partials/navbar.ejs") %>
+    <%- include("../crime-related-app-main/partials/navbar.ejs") %>
  
     <div class="container_1">
       <h1 id="brandName" style="text-align: center; font-size: 80px; position: relative; top: 210px; left: 0%; color: rgb(117, 153, 251); font-weight: bolder;"><b></b></h1>
@@ -96,96 +96,96 @@
     <div class="container">
       <div class="flex-box">
         <a href="/criminal">
-          <img src="/gallery/ICONS/criminal.png" alt="criminal">
+          <img src="/app-main/gallery/ICONS/criminal.png" alt="criminal">
           <span>Criminals</span>
         </a>
       </div>
       
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/criminal alias.png" alt="criminal alias">
+          <img src="/app-main/gallery/ICONS/criminal alias.png" alt="criminal alias">
           <span>Criminal Alias</span>
         </a>
       </div>
       
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/crime.png" alt="crime">
+          <img src="/app-main/gallery/ICONS/crime.png" alt="crime">
           <span>Crimes</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/arrest.png" alt="arrest">
+          <img src="/app-main/gallery/ICONS/arrest.png" alt="arrest">
           <span>Arrests</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/officer.png" alt="officer">
+          <img src="/app-main/gallery/ICONS/officer.png" alt="officer">
           <span>Officers</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/investigation.png" alt="investigation">
+          <img src="/app-main/gallery/ICONS/investigation.png" alt="investigation">
           <span>Investigations</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/case.png" alt="case">
+          <img src="/app-main/gallery/ICONS/case.png" alt="case">
           <span>Cases</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/witness.png" alt="witness">
+          <img src="/app-main/gallery/ICONS/witness.png" alt="witness">
           <span>Witnesses</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/evidence.png" alt="evidence">
+          <img src="/app-main/gallery/ICONS/evidence.png" alt="evidence">
           <span>Evidences</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/suspect.png" alt="suspect">
+          <img src="/app-main/gallery/ICONS/suspect.png" alt="suspect">
           <span>Suspects</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/victim.png" alt="victim">
+          <img src="/app-main/gallery/ICONS/victim.png" alt="victim">
           <span>Victims</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/sentence.png" alt="sentence">
+          <img src="/app-main/gallery/ICONS/sentence.png" alt="sentence">
           <span>Sentences</span>
         </a>
       </div>
 
       <div class="flex-box">
         <a href="#">
-          <img src="/gallery/ICONS/jail.png" alt="jail">
+          <img src="/app-main/gallery/ICONS/jail.png" alt="jail">
           <span>Jail</span>
         </a>
       </div>
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/app-main/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
