--- a/views/app-main/login-signup.ejs
+++ b/views/app-main/login-signup.ejs
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pakPOL | Login Sign-Up</title>
 
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
     
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/app-main/css/home.css">
 
     <style>
 
         body{
-            background-image: url(../gallery/IMAGES/Blood\ Strains.jpg);
+            background-image: url(../app-main/gallery/IMAGES/Blood\ Strains.jpg);
             background-position: center;
             background-repeat: no-repeat;
         }
