--- a/views/app-main/password-reset-success.ejs
+++ b/views/app-main/password-reset-success.ejs
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>pakPOL | Password Reset Success</title>
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
     <style>
 
         body {
-            background-image: url(../gallery/IMAGES/Blood\ Strains.jpg);
+            background-image: url(../app-main/gallery/IMAGES/Blood\ Strains.jpg);
             background-position: center;
             background-repeat: no-repeat;
             font-family: Arial, sans-serif;
