--- a/views/app-main/search.ejs
+++ b/views/app-main/search.ejs
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pakPOL | Search Results</title>
 
-  <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+  <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/app-main/css/bootstrap.min.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/search.css">
+  <link rel="stylesheet" href="/app-main/css/search.css">
 
 </head>
 <body>
 
 <!-- search.ejs -->
-<%- include("../partials/navbar.ejs") %>
+<%- include("../crime-related-app-main/partials/navbar.ejs") %>
 
 <div class="container">
 
@@ -167,7 +167,7 @@
 
 
 <!-- Bootstrap JS -->
-<script src="/js/bootstrap.min.js"></script>
+<script src="/app-main/js/bootstrap.min.js"></script>
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
