--- a/views/crime-related-app-main/criminal/edit.ejs
+++ b/views/crime-related-app-main/criminal/edit.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL | Edit a Record</title>
 
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/app-main/css/bootstrap.min.css" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/app-main/css/style.css" />
 
   </head>
 
@@ -233,7 +233,7 @@
     </script>
     
     
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/app-main/js/bootstrap.min.js"></script>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     
