--- a/views/app-main/reset-password.ejs
+++ b/views/app-main/reset-password.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pakPOL | Reset Password</title>
 
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
     
     <style>
 
         body {
-            background-image: url(../gallery/IMAGES/Blood\ Strains.jpg);
+            background-image: url(../app-main/gallery/IMAGES/Blood\ Strains.jpg);
             background-position: center;
             background-repeat: no-repeat;
             font-family: Arial, sans-serif;
