--- a/views/crime-related-app-main/criminal/gallery/explore-section/explore.ejs
+++ b/views/crime-related-app-main/criminal/gallery/explore-section/explore.ejs
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL | Explore Section</title>
 
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/app-main/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style_2.css" />
+    <link rel="stylesheet" href="/app-main/css/style_2.css" />
 
   <style>
     
@@ -91,7 +91,7 @@
         </a>
       </div>
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/app-main/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
