--- a/views/crime-related-app-main/criminal/index.ejs
+++ b/views/crime-related-app-main/criminal/index.ejs
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL | Criminal Records</title>
 
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/app-main/css/bootstrap.min.css" />
 
     <style>
       
@@ -158,7 +158,7 @@
 
     </div>
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/app-main/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
