--- a/views/crime-related-app-main/criminal/show.ejs
+++ b/views/crime-related-app-main/criminal/show.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL | Criminal Record</title>
-    <link rel="icon" href="/gallery/ICONS/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="/app-main/gallery/ICONS/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/app-main/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/app-main/css/style.css" />
     
     
     <style>
