Major Changes Related to AI Servers

--- a/views/crime-related-app-main/criminal/index.ejs
+++ b/views/crime-related-app-main/criminal/index.ejs
@@ -132,6 +132,10 @@
 
     <a href="/criminal/new" class="btn btn-danger">Click here to enter a New Record</a>
 
+    <a href="/advanced-face-recognition-search" class="btn btn-danger">Face Recognition Based Search</a>
+
+    <a href="/advanced-fingerprint-recognition-search" class="btn btn-danger">Fingerprint Recognition Based Search</a>
+
     <div class="container">
       <h2><u>All Criminal Records</u></h2>
 
