--- a/views/app-main/face-search.ejs
+++ b/views/app-main/face-search.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pakPOL | Fingerprint Recognition Search</title>
+    <title>pakPOL | Face Recognition Search</title>
     
     <!-- Favicon -->
     <link rel="icon" href="./app-main/gallery/ICONS/favicon.png" type="image/x-icon">
@@ -163,10 +163,10 @@
 </head>
 <body>
 
-    <h1>Search by a Fingerprint Image</h1>
+    <h1>Search by a Face Image</h1>
 
     <div class="form-container">
-        <form action="/advanced-fingerprint-recognition-search" method="POST" enctype="multipart/form-data">
+        <form action="/advanced-face-recognition-search" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="image" class="form-label">Upload an image to search:</label>
                 <input type="file" name="file" class="form-control" required>
