--- a/views/crime-related-app-main/criminal/edit.ejs
+++ b/views/crime-related-app-main/criminal/edit.ejs
@@ -50,6 +50,8 @@
             id="Criminal_Name"
             name="Criminal_Name"
             value="<%= foundcriminal.Criminal_Name %>"
+            pattern="[A-Za-z\s]+" 
+            title="Only letters and spaces are allowed"
           />
         </div>
 
@@ -62,6 +64,8 @@
             id="Criminal_WantedByCountry"
             name="Criminal_WantedByCountry" required
             value="<%= foundcriminal.Criminal_WantedByCountry %>"
+            pattern="[A-Za-z\s,()-]+" 
+            title="Only letters and spaces are allowed"
           />
         </div>
         
@@ -74,6 +78,8 @@
             id="Criminal_Crime"
             name="Criminal_Crime" required
             value="<%= foundcriminal.Criminal_Crime %>"
+            pattern="[A-Za-z\s,()-]+" 
+            title="Only letters and spaces are allowed"
          />
         </div>
         
@@ -98,6 +104,8 @@
             id="Criminal_Gender"
             name="Criminal_Gender"
             value="<%= foundcriminal.Criminal_Gender %>"
+            pattern="[A-Za-z\s]+" 
+            title="Only letters and spaces are allowed"
           />
         </div>
         
@@ -146,6 +154,8 @@
             id="Criminal_Nationality"
             name="Criminal_Nationality"
             value="<%= foundcriminal.Criminal_Nationality %>"
+            pattern="[A-Za-z\s,()-]+" 
+            title="Only letters and spaces are allowed"
           />
         </div>
         
@@ -158,6 +168,8 @@
             id="Criminal_SpokenLanguages"
             name="Criminal_SpokenLanguages"
             value="<%= foundcriminal.Criminal_SpokenLanguages %>"
+            pattern="[A-Za-z\s,()-]+" 
+            title="Only letters and spaces are allowed"
           />
         </div>
         
@@ -231,8 +243,20 @@
       // fileInput.value = '<%= foundcriminal.Criminal_Image %>';
 
     </script>
-    
-    
+
+    <script>
+      document.querySelector('form').addEventListener('submit', function (e) {
+        const nameField = document.getElementById('Criminal_Name');
+        const namePattern = /^[A-Za-z\s]+$/;
+        
+        if (!namePattern.test(nameField.value)) {
+          e.preventDefault();
+          alert('Only letters and spaces are allowed in the name.');
+          nameField.focus();
+        }
+      });
+    </script>
+
     <script src="/app-main/js/bootstrap.min.js"></script>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
